[gd_scene load_steps=34 format=3 uid="uid://csjebvsdmxbma"]

[ext_resource type="Shader" uid="uid://j1vimvg1iqgf" path="res://Shaders/Fire/FireShader.tres" id="1_gpqd0"]
[ext_resource type="Script" path="res://Shaders/Fire/fire_effect.gd" id="1_xr4w4"]
[ext_resource type="Texture2D" uid="uid://dpiakin8jn14o" path="res://Shaders/Fire/GAP_Fire_Textures/Voronoi01.png" id="2_ribd8"]
[ext_resource type="Texture2D" uid="uid://e1s5olru21ax" path="res://Shaders/Fire/GAP_Fire_Textures/Flame01.png" id="3_4dnq4"]
[ext_resource type="Texture2D" uid="uid://br3yaxuyudrf6" path="res://Shaders/Fire/GAP_Fire_Textures/Flame02.png" id="4_ra1rg"]
[ext_resource type="Shader" uid="uid://cupcfch382xpr" path="res://Shaders/Fire/SimpleParticles.tres" id="5_ywigm"]
[ext_resource type="Texture2D" uid="uid://op0rugfhyfe7" path="res://Shaders/Fire/GAP_Fire_Textures/Flare00.PNG" id="6_ytb2n"]
[ext_resource type="Script" path="res://Shaders/Fire/FireLight.gd" id="7_x2gqs"]
[ext_resource type="AudioStream" uid="uid://dy04tbawnr8ea" path="res://Audio/Online Sources/Fire Crackling.wav" id="8_6tvre"]
[ext_resource type="AudioStream" uid="uid://duh42qvy84hku" path="res://Audio/Online Sources/Fire Sizzle.wav" id="10_yb4ib"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nw8ye"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("1_gpqd0")
shader_parameter/DissolveTiling = Vector2(0.25, 0.2)
shader_parameter/DissolveAmount = 0.505
shader_parameter/MainTex = ExtResource("3_4dnq4")
shader_parameter/DissolveTexture = ExtResource("2_ribd8")

[sub_resource type="Curve" id="Curve_l2aoa"]
max_value = 5.0
_data = [Vector2(0, 5), 0.0, 0.0, 0, 0, Vector2(0.68254, 5), 0.0, 0.0, 0, 0, Vector2(1, 5), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_4h7kj"]
curve = SubResource("Curve_l2aoa")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_v1ynj"]
gravity = Vector3(0, 0, 0)
color = Color(4, 1.25, 0.6, 0.8)
emission_curve = SubResource("CurveTexture_4h7kj")

[sub_resource type="QuadMesh" id="QuadMesh_vw2dk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e7kjb"]
render_priority = 0
shader = ExtResource("1_gpqd0")
shader_parameter/DissolveTiling = Vector2(1, 1)
shader_parameter/DissolveAmount = 0.0
shader_parameter/MainTex = ExtResource("4_ra1rg")
shader_parameter/DissolveTexture = ExtResource("2_ribd8")

[sub_resource type="Curve" id="Curve_f5mga"]
max_value = 5.0
_data = [Vector2(0, 5), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="CurveTexture" id="CurveTexture_266k7"]
curve = SubResource("Curve_f5mga")

[sub_resource type="Curve" id="Curve_jpvnm"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.173913, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_oxbvl"]
curve = SubResource("Curve_jpvnm")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5b4lq"]
emission_shape = 1
emission_sphere_radius = 0.2
angle_min = -360.0
angle_max = 360.0
gravity = Vector3(0, 5, 0)
damping_min = 0.5
damping_max = 1.0
scale_min = 1.5
scale_max = 2.25
scale_curve = SubResource("CurveTexture_oxbvl")
color = Color(4.01176, 1.2549, 0.623529, 1)
emission_curve = SubResource("CurveTexture_266k7")

[sub_resource type="QuadMesh" id="QuadMesh_02qfi"]

[sub_resource type="Gradient" id="Gradient_bebkt"]
offsets = PackedFloat32Array(0.00621118, 0.310559, 0.645963, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5pe4o"]
gradient = SubResource("Gradient_bebkt")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_t352c"]
resource_local_to_scene = true
emission_shape = 1
emission_sphere_radius = 0.3
angle_min = -360.0
angle_max = 360.0
gravity = Vector3(0, 4, 0)
damping_min = 0.5
damping_max = 1.0
scale_min = 2.0
scale_max = 2.75
scale_curve = SubResource("CurveTexture_oxbvl")
color = Color(0, 0, 0, 1)
color_ramp = SubResource("GradientTexture1D_5pe4o")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gnrxw"]
render_priority = 0
shader = ExtResource("5_ywigm")
shader_parameter/MainTex = ExtResource("6_ytb2n")

[sub_resource type="Curve" id="Curve_i807q"]
max_value = 5.0
_data = [Vector2(0, 5), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="CurveTexture" id="CurveTexture_ly0oq"]
curve = SubResource("Curve_i807q")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yyqx5"]
emission_shape = 1
emission_sphere_radius = 0.6
gravity = Vector3(0, 4, 0)
scale_min = 0.01
scale_max = 0.12
color = Color(4.01176, 1.2549, 0.623529, 1)
emission_curve = SubResource("CurveTexture_ly0oq")
turbulence_enabled = true
turbulence_noise_scale = 5.0
turbulence_influence_min = 0.05
turbulence_influence_max = 0.3

[sub_resource type="QuadMesh" id="QuadMesh_x8s7y"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_l83if"]
noise_type = 3
frequency = 0.0364

[sub_resource type="NoiseTexture3D" id="NoiseTexture3D_tdshb"]
noise = SubResource("FastNoiseLite_l83if")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lljsd"]
radius = 0.7
height = 3.0

[node name="Fire Effect" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000534058, 0.319399, -0.000610352)
script = ExtResource("1_xr4w4")

[node name="StaticFlame" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000281692, 0.0136154, 3.45707e-05)
visible = false
material_override = SubResource("ShaderMaterial_nw8ye")
amount = 1
lifetime = 5.0
preprocess = 2.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_v1ynj")
draw_pass_1 = SubResource("QuadMesh_vw2dk")

[node name="Flames" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.15724, 0)
material_override = SubResource("ShaderMaterial_e7kjb")
amount = 20
lifetime = 1.2
preprocess = 2.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_5b4lq")
draw_pass_1 = SubResource("QuadMesh_02qfi")

[node name="Smoke" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.22119, -0.165741, -8.27312e-05)
material_override = SubResource("ShaderMaterial_e7kjb")
amount = 30
lifetime = 2.5
preprocess = 2.0
randomness = 0.5
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_t352c")
draw_pass_1 = SubResource("QuadMesh_02qfi")

[node name="ParticlesFloating" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.103944, 0)
sorting_offset = 1.0
material_override = SubResource("ShaderMaterial_gnrxw")
amount = 50
lifetime = 2.0
preprocess = 2.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_yyqx5")
draw_pass_1 = SubResource("QuadMesh_x8s7y")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(0.968627, 0.556863, 0, 1)
shadow_enabled = true
omni_range = 30.0
script = ExtResource("7_x2gqs")
noise = SubResource("NoiseTexture3D_tdshb")

[node name="FireAmbience" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_6tvre")
autoplay = true
bus = &"SFX"

[node name="FireSizzle" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_yb4ib")

[node name="Hitbox" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 7
collision_mask = 7

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.743101, 0)
shape = SubResource("CapsuleShape3D_lljsd")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
